More improvements - left align IDs as suggested by Tom, and found that applying fixed width now causes max-width type behaviour that I wanted - yay!

--- a/django/econsensus/publicweb/static/css/styles.css
+++ b/django/econsensus/publicweb/static/css/styles.css
@@ -365,7 +365,8 @@ input {
 }
 
 .id {
-    width: 140px;
+    width: 80px;
+    text-align: left;
 }
 
 p.no_items {
